syntax = "proto3";

package nilorg.naas.pkg.proto;
option go_package = "github.com/nilorg/naas/pkg/proto";

import "google/api/annotations.proto";

import "nilorg/protobuf/errors/business_error.proto";

service Account {
    rpc GetCurrent (GetCurrentRequest) returns (GetCurrentResponse) {
        option (google.api.http) = {
            get: "/account/current"
        };
    };
    rpc GetUserInfo (GetUserInfoRequest) returns (GetCurrentResponse) {
        option (google.api.http) = {
            get: "/account/user_info"
        };
    };
}

message User {
    string id = 1;
    int64 created_at = 2;
    int64 updated_at = 3;
    int64 deleted_at = 4;
    string username = 5;
}

message UserInfo {
    string nick_name = 1;
    string avatar_url = 2;
    uint32 gender = 3;
}

message GetCurrentRequest {}
message GetUserInfoRequest {
    string open_id = 1;
}


message GetCurrentResponse {
    nilorg.protobuf.errors.BusinessError err = 1;
    User user = 2;
    UserInfo user_info = 3;
}
